--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}YY壁纸站{% endblock %}</title>
+    <title>{% block title %}YY媒体站{% endblock %}</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="/static/fontawesome-free-6.6.0-web/css/all.min.css">
     <!-- 自定义CSS -->
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <h1><i class="fas fa-images"></i> YY壁纸</h1>
+                    <h1><i class="fas fa-images"></i> YY媒体站</h1>
                 </div>
                 <nav class="nav">
                     <ul>
