--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
         <h2><i class="fas fa-info-circle"></i> 关于网站</h2>
         <p>欢迎来到我的多媒体小站！这里有我收集的各种精美图片和视频。</p>
         <p>可以切换瀑布流和分页式两种视图模式，点击图片查看大图及详情。</p>
-        <p>&copy; {{ current_year }} Yoy基于AI创建</p>
+        <p>&copy; {{ current_year }} Yoy基于AI开发</p>
     </div>
 </div>
 {% endblock %}
